[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Score.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ScoreItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Styles/Separator.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/Lane_Buttons.tscn" type="PackedScene" id=5]

[node name="Score" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )

[node name="ScoreItem1" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 576.0
margin_bottom = 126.0

[node name="ScoreItem2" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 146.0
margin_right = 576.0
margin_bottom = 272.0

[node name="ScoreItem3" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 292.0
margin_right = 576.0
margin_bottom = 418.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 438.0
margin_right = 576.0
margin_bottom = 438.0
custom_styles/separator = ExtResource( 3 )
custom_constants/separation = 0

[node name="ScoreItem4" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 458.0
margin_right = 576.0
margin_bottom = 584.0

[node name="ScoreItem5" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 604.0
margin_right = 576.0
margin_bottom = 730.0

[node name="ScoreItem6" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 750.0
margin_right = 576.0
margin_bottom = 876.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 896.0
margin_right = 576.0
margin_bottom = 1024.0
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="Lane_Buttons" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="substractScore" parent="HBoxContainer/Lane_Buttons" index="0"]
margin_bottom = 128.0

[node name="addScore" parent="HBoxContainer/Lane_Buttons" index="1"]
margin_bottom = 130.0
[connection signal="pressed" from="HBoxContainer/Lane_Buttons/substractScore" to="." method="_on_substractScore_pressed"]
[connection signal="pressed" from="HBoxContainer/Lane_Buttons/addScore" to="." method="_on_addScore_pressed"]

[editable path="HBoxContainer/Lane_Buttons"]
